# actions-template

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: action.py  predict_cairo_action.py
