[tool.poetry]
name = "giza-actions-template"
version = "0.1.0"
description = "Template repository for Giza Actions"
authors = ["Fran Algaba <fran@gizatech.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cookiecutter = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
