[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "Giza Actions SDK project"
authors = ["Giza <contact@gizatech.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
giza-actions = "^0.1.0"
giza-datasets = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
